# PacketSentry

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: README.md
demo/: README.md  analysis_report.txt  expected_analysis_report.txt  filtered.pcap  rules.txt
docs/: ARCHITECTURE.md  SECURITY_ETHICS.md  UI_BLUEPRINT.md
include/: rule_manager.h  types.h
src/: dpi_engine.cpp  fast_path.cpp  load_balancer.cpp  main_dpi.cpp  rule_manager.cpp  sni_extractor.cpp  types.cpp
tests/: unit_tests.cpp
ui/: README.md  app.js  index.html  packetdpi-report.json  sample-data.json  styles.css
